UI改善: レビュー指摘テーブルの列幅最適化とレスポンシブ対応を実装
- 内容列に35%の幅を割り当て、可読性を向上
- 各列の重要度に応じた適切な幅比率を設定
- 長いテキストの折り返し表示を実装
- 分類フィールド列の幅を最小限に設定
- レスポンシブ表示での可読性を維持
- 要件10.1-10.5に対応

--- a/project-detail.html
+++ b/project-detail.html
@@ -91,7 +91,7 @@
                     <button id="clear-filters-btn" class="btn btn-secondary">フィルタクリア</button>
                 </div>
 
-                <div id="review-findings-container">
+                <div id="review-findings-container" class="review-findings-container">
                     <!-- レビュー指摘テーブルがここに動的に挿入される -->
                 </div>
             </div>
