feat: GitHub CI統合機能の実装完了 - 最終チェックポイント
- GitHub API統合機能の実装
  - Octokit.jsを使用したGitHub API統合
  - Personal Access Tokenの暗号化保存
  - ワークフロー実行データの取得と解析
  - メトリクス抽出エンジン

- 自動同期機能
  - 自動同期スケジューラー
  - レート制限管理
  - エラー回復とネットワーク監視

- UI機能
  - 設定ページ（settings.html）
  - GitHub統合設定UI
  - 同期履歴表示
  - プロジェクト詳細ページの拡張

- プラグイン基盤
  - CI/CDサービス抽象化
  - 将来の拡張に対応

- テストスイート
  - 12個の包括的なテストファイル
  - テスト実行ダッシュボード
  - テスト結果チェックリスト

- ドキュメント
  - 要件定義書
  - 設計文書
  - 実装計画
  - テスト実行ガイド

--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@
                 <button id="theme-toggle" class="theme-toggle" aria-label="テーマ切り替え" title="ダークモード切り替え">
                     🌙
                 </button>
+                <a href="settings.html" class="btn btn-secondary">
+                    <span class="nav-icon">⚙️</span>
+                    設定
+                </a>
                 <button id="add-project-btn" class="btn btn-primary">
                     <span class="nav-icon">+</span>
                     プロジェクト追加
@@ -41,6 +45,10 @@
                     <span class="nav-icon">🌙</span>
                     <span class="nav-text">ダークモード切り替え</span>
                 </button>
+                <a href="settings.html" class="mobile-nav-item btn-mobile btn-secondary-mobile">
+                    <span class="nav-icon">⚙️</span>
+                    <span class="nav-text">設定</span>
+                </a>
                 <button id="mobile-add-project-btn" class="mobile-nav-item btn-mobile btn-primary-mobile">
                     <span class="nav-icon">+</span>
                     <span class="nav-text">プロジェクト追加</span>
@@ -150,6 +158,18 @@
     <!-- エラー・成功メッセージ表示エリア -->
     <div id="message-container"></div>
 
+    <!-- Octokit.js CDN -->
+    <script src="https://cdn.skypack.dev/octokit"></script>
+    <script src="token-encryption.js"></script>
+    <script src="metrics-extractor.js"></script>
+    <script src="error-recovery.js"></script>
+    <script src="network-monitor.js"></script>
+    <script src="github-integration.js"></script>
+    <script src="github-error-handler.js"></script>
+    <script src="ci-service-plugin.js"></script>
+    <script src="ci-service-settings-manager.js"></script>
+    <script src="settings.js"></script>
+    <script src="github-ui-controller.js"></script>
     <script src="app.js"></script>
 </body>
 </html>
