--- a/project-detail.html
+++ b/project-detail.html
@@ -813,8 +813,13 @@
     <!-- エラー・成功メッセージ表示エリア -->
     <div id="message-container"></div>
 
-    <!-- Octokit.js CDN -->
-    <script src="https://cdn.skypack.dev/octokit"></script>
+    <!-- Octokit.js CDN - ブラウザ対応版 -->
+    <script src="https://cdn.jsdelivr.net/npm/@octokit/core@5.0.2/dist/bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@octokit/plugin-rest-endpoint-methods@10.0.1/dist/bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@octokit/plugin-paginate-rest@9.1.5/dist/bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@octokit/plugin-throttling@8.1.3/dist/bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@octokit/plugin-retry@6.0.1/dist/bundle.min.js"></script>
+    
     <script src="token-encryption.js"></script>
     <script src="metrics-extractor.js"></script>
     <script src="error-recovery.js"></script>
