fix: CDNをUNPKGに変更してOctokit読み込み問題を解決
- jsDelivr CDN (404エラー)  UNPKG CDN に変更
- github-integration.js: UNPKG CDNのグローバル変数に対応
- window.OctokitCore  window.Octokit に変更
- プラグインシステムを簡略化

UNPKGは自動的にブラウザ用ビルドを提供します

--- a/index.html
+++ b/index.html
@@ -158,12 +158,12 @@
     <!-- エラー・成功メッセージ表示エリア -->
     <div id="message-container"></div>
 
-    <!-- Octokit.js CDN - ブラウザ対応版 -->
-    <script src="https://cdn.jsdelivr.net/npm/@octokit/core@5.0.2/dist/bundle.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@octokit/plugin-rest-endpoint-methods@10.0.1/dist/bundle.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@octokit/plugin-paginate-rest@9.1.5/dist/bundle.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@octokit/plugin-throttling@8.1.3/dist/bundle.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@octokit/plugin-retry@6.0.1/dist/bundle.min.js"></script>
+    <!-- Octokit.js CDN - UNPKG (ブラウザ対応版) -->
+    <script src="https://unpkg.com/@octokit/core"></script>
+    <script src="https://unpkg.com/@octokit/plugin-rest-endpoint-methods"></script>
+    <script src="https://unpkg.com/@octokit/plugin-paginate-rest"></script>
+    <script src="https://unpkg.com/@octokit/plugin-throttling"></script>
+    <script src="https://unpkg.com/@octokit/plugin-retry"></script>
     
     <script src="token-encryption.js"></script>
     <script src="metrics-extractor.js"></script>
