--- a/project-detail.html
+++ b/project-detail.html
@@ -813,12 +813,12 @@
     <!-- エラー・成功メッセージ表示エリア -->
     <div id="message-container"></div>
 
-    <!-- Octokit.js CDN - UNPKG (ブラウザ対応版) -->
-    <script src="https://unpkg.com/@octokit/core"></script>
-    <script src="https://unpkg.com/@octokit/plugin-rest-endpoint-methods"></script>
-    <script src="https://unpkg.com/@octokit/plugin-paginate-rest"></script>
-    <script src="https://unpkg.com/@octokit/plugin-throttling"></script>
-    <script src="https://unpkg.com/@octokit/plugin-retry"></script>
+    <!-- Octokit.js CDN - jsDelivr (ブラウザ対応版、トラッキング防止に強い) -->
+    <script src="https://cdn.jsdelivr.net/npm/@octokit/core@5.0.0/dist-web/index.js" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@octokit/plugin-rest-endpoint-methods@10.0.0/dist-web/index.js" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@octokit/plugin-paginate-rest@9.0.0/dist-web/index.js" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@octokit/plugin-throttling@8.0.0/dist-web/index.js" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@octokit/plugin-retry@6.0.0/dist-web/index.js" crossorigin="anonymous"></script>
     
     <script src="token-encryption.js"></script>
     <script src="metrics-extractor.js"></script>
