fix: Octokit.jsを統合版パッケージに変更して404エラーを解決
- 個別パッケージ(@octokit/core等)から統合版(octokit)に変更
- 5ファイルから1ファイルに統合（シンプル化）
- 404エラーを解決（存在しないバンドルファイルの問題）
- HTTPリクエスト数を削減してパフォーマンス向上
- メンテナンス性の向上

--- a/project-detail.html
+++ b/project-detail.html
@@ -813,12 +813,8 @@
     <!-- エラー・成功メッセージ表示エリア -->
     <div id="message-container"></div>
 
-    <!-- Octokit.js CDN - jsDelivr (UMDバンドル版、ブラウザ対応) -->
-    <script src="https://cdn.jsdelivr.net/npm/@octokit/core@5.0.2/dist/bundle.min.js" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@octokit/plugin-rest-endpoint-methods@10.0.1/dist/bundle.min.js" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@octokit/plugin-paginate-rest@9.1.5/dist/bundle.min.js" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@octokit/plugin-throttling@8.1.3/dist/bundle.min.js" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@octokit/plugin-retry@6.0.1/dist/bundle.min.js" crossorigin="anonymous"></script>
+    <!-- Octokit.js CDN - jsDelivr (統合版、ブラウザ対応) -->
+    <script src="https://cdn.jsdelivr.net/npm/octokit@3.1.2/dist/octokit.min.js" crossorigin="anonymous"></script>
     
     <script src="token-encryption.js"></script>
     <script src="metrics-extractor.js"></script>
